  in R-squared, and has the advantage of being a valid formal test even for
  models that were fitted using PQL.
* buildmer will no longer export its own internal structures to user-provided
  cluster nodes
* If singular.ok=TRUE, converged() will now also test singular fits for
  convergence, rather than discard them outright
. glmmTMB models are now also checked for gradient convergence, not just for
  positive-definiteness of the Hessian

1.6

*** Function conv() has been renamed to converged(). Of course, an alias
    remains, but it is now deprecated and will be removed in a future release.
** clm and clmm support
* Argument 'cl' now accepts an integer argument, in which case buildmer will
  create and manage a cluster for you
* REML can now be forced on by passing REML=TRUE. As an optimization, REML is
  forced on if the deviance-explained criterion is used. This can be disabled
  by passing REML=NA, which will fall back to the default behavior of
  differentiating between ML and REML. The ability to force REML off by
  passing REML=FALSE remains. This 'hidden' argument is now properly
  documented, as is the other hidden argument, 'dep'. For buildcustom(), where
  this option was already used explicitly with a different meaning, the old
  behavior remains as the new behavior doesn't make much sense if the user is
  specifying their own fitting function anyway.
* Remove deprecated 'reduce.fixed' and 'reduce.random' arguments (deprecated
  since 2019-11-27)
* Print the failure details when convergence failures cause order() or
  backward() to exit early
. Fix a bug combining backward() with the 'include' argument (GH issue #3)
. Fix a bug in calculating Wald p-values for ANOVA F scores affecting ndf >1
. Allow ddf='KR' as an abbreviation for ddf='Kenward-Roger'

1.5 (2020-03-01)

*** API change to the 'crit' function, which now has a new function signature
    (p,cur,alt)
*** Deprecate buildjulia due to the maintenance cost of duplicating all the